# Robust-Tracking-MPC-over-Lossy-Networks

./: .gitignore  LICENSE  README.md  setup.cfg
ECC Results/: ECC24_Estimate_W_for_Cartpole.py  ECC24_results_linear_system.py  ECC24_results_linear_system_with_extendedMPC.py  ECC24_results_nonlinear_system.py  ECC24_results_nonlinear_system_with_extendedMPC.py  README.md
Examples of Model Predictive Controllers/: Example_of_Regulator_MPC.py  Example_of_Tracking_MPC.py  Example_of_Tracking_MPC_Over_Lossy_Network.py  Example_of_Tube_Regulator_MPC.py  Example_of_Tube_Tracking_MPC.py  Example_of_Tube_Tracking_MPC_Over_Lossy_Network.py  README.md
Examples of Set Operations/: Example of Approximation of mRPI_Darup.py  Example of Approximation of mRPI_Rakovic.py  Example of Output Admissible Set Calculation.py  Example of Several Set Operations.py  README.md
Results/: README.md  create_animations.py  results_linear_system.py  results_linear_system_with_extendedMPC.py  results_nonlinear_system.py  results_nonlinear_system_with_extendedMPC.py
Results/Cartpole/: cartpole.py  cartpole.urdf
src/LinearMPCOverNetworks/: Estimator.py  RegulatorMPC.py  SmartActuator.py  TrackingMPC.py  TubeRegulatorMPC.py  TubeTrackingMPC.py  utils_polytope.py
