[metadata]
name = LinearMPCOverNetworks
version = 0.1.0
author = David Umsonst, Fernando dos Santos Barbosa
author_email = david.umsonst@ericsson.com, fernando.dos.santos.barbosa@ericsson.com
packages = find:
url = https://github.com/EricssonResearch/Robust-Tracking-MPC-over-Lossy-Networks
description =  A package that implements several linear MPC algorithms for regulation and tracking of a piece-wise constant reference. Several algorithms can be used for tracking over a lossy network.
license = MIT

[options]
install_requires:
    numpy >= 1.24.3
    control >= 0.9.3.post2
    cvxpy >= 1.4.1
    polytope >= 0.2.4
    scipy >= 1.10.1
    cvxopt >= 1.3.2
    clarabel
    
package_dir=
    =src

[options.packages.find]
where=src/LinearMPCOverNetworks